# simple-axum-template

./: Cargo.toml  cargo-generate.toml  pre-script.rhai
api/: Cargo.toml
api/src/: error.rs  lib.rs  main.rs  server.rs
api/src/api_doc/: mod.rs
api/src/middlewares/: mod.rs  response_mapper.rs
api/src/routes/v0/: hello_world.rs  mod.rs  swagger.rs
core/: Cargo.toml
core/src/: error.rs  hello_world_service.rs  lib.rs
domain/: Cargo.toml
domain/src/: configuration.rs  hello_world.rs  lib.rs
infrastructure/: Cargo.toml
infrastructure/src/db/: crud.rs  error.rs  hello_world_db.rs  in_memory_db.rs  mod.rs
test/integration/: Cargo.toml
test/stress/: Cargo.toml
test/stress/benches/: get_hello_world.rs
