[workspace]
resolver = "2"
members = [
    "test/*",
    # "util",
    "api",
    "core",
    "infrastructure",
    "domain"
]
readme = "README.md"


[workspace.dependencies]
serde_json = { version = "1.0" }
serde = { version = "1.0", features = ["derive"] }
tokio = {version = "1" }
log = { version = "^0.4.21" } 
env_logger = { version = "0.11" }
utoipa = { version = "4.2.3" }
uuid = { version = "1", features = ["v4","fast-rng",]}
dashmap = { version = "5.3" }

[workspace.package]
name = "{{project-name}}"
version = "0.1.0"
edition = "2021"
authors = ["{{authors}}"]
description = "{{project_description}}"
