[package]
name = "core"
version = "0.0.0"
edition = "2021"
publish = false
description = """
Workspace which has all code related to services and all business logics
"""

[dependencies]
domain = { path = "../domain", version = "0.0.0" }
infrastructure ={ path = "../infrastructure", version = "0.0.0" }


env_logger = { workspace = true }
log = { workspace = true }
tokio = { workspace = true , features = ["full"] }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true}