[package]
name = "domain"
version = "0.0.0"
edition = "2021"
publish = false
description = """
Workspace which has all code related model
"""

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
utoipa = { workspace = true , features = ["axum_extras"]}
 uuid = { workspace = true }